adding content and stylign to index page

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         <div class="row justify-content-center">
             <p class="lead">A simple calendar app for scheduling your work day</p>
         </div>
-        <div class="row justify-content-center">
-            <p id="currentDay" class="lead"></p>
+        <div class="row justify-content-center lead" id="currentDay">
+            <h6></h6>
         </div>
     </header>
+
+
     <div class="container">
         <!-- Timeblocks go here -->
     </div>
