--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
 
-    <div class="container">
+    <div class="container" id="timeBlocks">
         <!-- Timeblocks go here -->
     </div>
 
