adding in rows and columns for calendar grid

--- a/index.html
+++ b/index.html
@@ -26,13 +26,24 @@
         </div>
     </header>
 
-
     <div class="container" id="timeBlocks">
-        <!-- Timeblocks go here -->
+
+        <div id="calendar-row1" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time1" class="col-md-1">8 AM</div>
+            <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row2" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time2" class="col-md-1">9 AM</div>
+            <textarea rows="3" id="text-entry2" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
 </html>
