adding containers for daily tasks

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
+        <div id="calendar-row7" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time7" class="col-md-1 time">2 PM</div>
+            <textarea rows="3" id="text-entry7" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row8" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time8" class="col-md-1">3 PM</div>
+            <textarea rows="3" id="text-entry8" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
 
 
     </div>
