--- a/index.html
+++ b/index.html
@@ -30,53 +30,63 @@
 
         <div id="calendar-row1" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time1" class="col-md-1">8 AM</div>
-            <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry1" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row2" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time2" class="col-md-1">9 AM</div>
-            <textarea rows="3" id="text-entry2" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry2" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row3" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time3" class="col-md-1">10 AM</div>
-            <textarea rows="3" id="text-entry3" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry3" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row4" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time4" class="col-md-1">11 AM</div>
-            <textarea rows="3" id="text-entry4" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry4" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row5" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time5" class="col-md-1">12 PM</div>
-            <textarea rows="3" id="text-entry5" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry5" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row6" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time6" class="col-md-1 time">1 PM</div>
-            <textarea rows="3" id="text-entry6" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry6" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row7" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time7" class="col-md-1 time">2 PM</div>
-            <textarea rows="3" id="text-entry7" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry7" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
         <div id="calendar-row8" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time8" class="col-md-1">3 PM</div>
-            <textarea rows="3" id="text-entry8" class="col-md-10"></textarea>
+            <textarea rows="4" id="text-entry8" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
+        <div id="calendar-row9" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time9" class="col-md-1">4 PM</div>
+            <textarea rows="4" id="text-entry9" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
 
+        <div id="calendar-row10" class="row justify-control-md-center border-top border-bottom calendar-row">
+            <div id="time10" class="col-md-1">5 PM</div>
+            <textarea rows="4" id="text-entry10" class="col-md10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
 
     </div>
 
