--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 
     </div>
 
+    <footer id="footer">
+        <a href="https://github.com/codymichaud"><img id="github" src="./imgs/github.png" alt="github">
+            </img></a>
+    </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
