Styled footer. trying to figure out how to add half hour sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="planner.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <label id="logoMain">
+        <div id="logoInsideC"></div>
+        <div id="logoInsideS"></div>
+    </label>
     <title>Work Day Scheduler</title>
 </head>
 
@@ -100,6 +104,10 @@
     <footer id="footer">
         <a href="https://github.com/codymichaud"><img id="github" src="./imgs/github.png" alt="github">
             </img></a>
+
+
+        <p id="footerName">Cody Michaud 2021</p>
+        </p>
     </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
