Updated planner with extended hours for late or early activities

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
     <div class="container" id="timeBlocks">
 
+        <div id="calendar-row0" class="row justify-content-md-center border-top border-bottom calendar-row">
+            <div id="time0" class="col-md-1">7 AM</div>
+            <textarea rows="3" id="text-entry0" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
         <div id="calendar-row1" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time1" class="col-md-1">8 AM</div>
             <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
@@ -88,6 +94,30 @@
         <div id="calendar-row10" class="row justify-control-md-center border-top border-bottom calendar-row">
             <div id="time10" class="col-md-1">5 PM</div>
             <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row11" class="row justify-control-md-center border-top border-bottom calendar-row">
+            <div id="time11" class="col-md-1">6 PM</div>
+            <textarea rows="3" id="text-entry11" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row12" class="row justify-control-md-center border-top border-bottom calendar-row">
+            <div id="time12" class="col-md-1">7 PM</div>
+            <textarea rows="3" id="text-entry12" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row13" class="row justify-control-md-center border-top border-bottom calendar-row">
+            <div id="time13" class="col-md-1">8 PM</div>
+            <textarea rows="3" id="text-entry13" class="col-md-10"></textarea>
+            <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+        </div>
+
+        <div id="calendar-row14" class="row justify-control-md-center border-top border-bottom calendar-row">
+            <div id="time14" class="col-md-1">9 PM</div>
+            <textarea rows="3" id="text-entry14" class="col-md-10"></textarea>
             <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
         </div>
 
