--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <h1 class="display-3">Work Day Scheduler</h1>
         </div>
         <div class="row justify-content-center">
-            <p class="lead">A simple calendar app for scheduling your work day</p>
+            <p class="lead">The go to scheduler for any work day</p>
         </div>
         <div class="row justify-content-center lead" id="currentDay">
             <h6></h6>
         </div>
     </header>
 
-    <div class="container" id="timeBlocks">
+    <div class="container container-fluid" id="timeBlocks">
 
         <div id="calendar-row0" class="row justify-content-md-center border-top border-bottom calendar-row">
             <div id="time0" class="col-md-1">7 AM</div>
